[gd_scene load_steps=32 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://scripts/PlayerInteractionArea.gd" type="Script" id=2]
[ext_resource path="res://scripts/PlayerSmallInteractionArea.gd" type="Script" id=3]
[ext_resource path="res://assets/player_sheet0000.png" type="Texture" id=4]
[ext_resource path="res://scripts/PlayerSprite.gd" type="Script" id=5]
[ext_resource path="res://scripts/MouseCamera.gd" type="Script" id=6]
[ext_resource path="res://assets/sounds/jump.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/jump_overalls.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/land.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/sounds/bump.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/DELETEME/LA_Link_Fall.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/sounds/worm.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/sounds/wormClimb.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/sounds/hurt.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/sounds/gurgle_firered.wav" type="AudioStream" id=15]
[ext_resource path="res://sceneObjects/BugNet.tscn" type="PackedScene" id=16]
[ext_resource path="res://sceneObjects/Spells/Sword.tscn" type="PackedScene" id=17]
[ext_resource path="res://sceneObjects/PauseMenu.tscn" type="PackedScene" id=18]
[ext_resource path="res://assets/enemy_sheet2.png" type="Texture" id=19]
[ext_resource path="res://sceneObjects/PlayerCameraFlash.gd" type="Script" id=20]
[ext_resource path="res://assets/water_normal_2.png" type="Texture" id=21]

[sub_resource type="BoxShape" id=1]

[sub_resource type="SphereShape" id=2]
radius = 2.0

[sub_resource type="BoxShape" id=3]

[sub_resource type="Shader" id=4]
code = "shader_type spatial;
render_mode blend_mix,depth_draw_alpha_prepass,cull_back,diffuse_burley,specular_schlick_ggx,unshaded;
uniform vec4 albedo : hint_color;
uniform sampler2D texture_albedo : hint_albedo;
uniform float specular;
uniform float metallic;
uniform float roughness : hint_range(0,1);
uniform float point_size : hint_range(0,128);
uniform sampler2D texture_metallic : hint_white;
uniform vec4 metallic_texture_channel;
uniform sampler2D texture_roughness : hint_white;
uniform vec4 roughness_texture_channel;
uniform vec3 uv1_scale;
uniform vec3 uv1_offset;
uniform vec3 uv2_scale;
uniform vec3 uv2_offset;


void vertex() {
	UV=UV*uv1_scale.xy+uv1_offset.xy;
	MODELVIEW_MATRIX = INV_CAMERA_MATRIX * mat4(CAMERA_MATRIX[0],CAMERA_MATRIX[1],CAMERA_MATRIX[2],WORLD_MATRIX[3]);
}




void fragment() {
	vec2 base_uv = UV;
	vec4 albedo_tex = texture(texture_albedo,base_uv);
	ALBEDO = albedo.rgb * albedo_tex.rgb;
	float metallic_tex = dot(texture(texture_metallic,base_uv),metallic_texture_channel);
	METALLIC = metallic_tex * metallic;
	float roughness_tex = dot(texture(texture_roughness,base_uv),roughness_texture_channel);
	ROUGHNESS = roughness_tex * roughness;
	SPECULAR = specular;
	ALPHA = albedo.a * albedo_tex.a;
    if (albedo_tex.r == 1.0 && albedo_tex.g == 0.0 && albedo_tex.b == 1.0) {
        ALPHA = 0.0;
    }
}
"

[sub_resource type="ViewportTexture" id=5]
viewport_path = NodePath("SpriteViewport")

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 4 )
shader_param/albedo = Color( 1, 1, 1, 1 )
shader_param/specular = 0.5
shader_param/metallic = 0.0
shader_param/roughness = 1.0
shader_param/point_size = 1.0
shader_param/metallic_texture_channel = Plane( 1, 0, 0, 0 )
shader_param/roughness_texture_channel = Plane( 1, 0, 0, 0 )
shader_param/uv1_scale = Vector3( 1, 1, 1 )
shader_param/uv1_offset = Vector3( 0, 0, 0 )
shader_param/uv2_scale = Vector3( 1, 1, 1 )
shader_param/uv2_offset = Vector3( 0, 0, 0 )
shader_param/texture_albedo = SubResource( 5 )

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
flags_unshaded = true
params_depth_draw_mode = 3
albedo_texture = ExtResource( 19 )

[sub_resource type="CubeMesh" id=8]
size = Vector3( 1, 1, 1 )

[sub_resource type="Shader" id=9]
code = "shader_type canvas_item;

uniform float brightness = 1.0;
uniform float contrast = 25.0;
uniform float saturation = 50.0;

void fragment() {
    vec3 c = textureLod(SCREEN_TEXTURE, SCREEN_UV, 0.0).rgb;

    c.rgb = mix(vec3(0.0), c.rgb, brightness);
    c.rgb = mix(vec3(0.5), c.rgb, contrast);
    c.rgb = mix(vec3(dot(vec3(1.0), c.rgb) * 0.33333), c.rgb, saturation);
    
    // c.rgb = vec3(1.0, 0.0, 0.0);

    COLOR.rgb = c;
}"

[sub_resource type="ShaderMaterial" id=10]
shader = SubResource( 9 )
shader_param/brightness = 1.0
shader_param/contrast = 25.0
shader_param/saturation = 50.0

[node name="Player" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.14603, 4.21971 )
collision_layer = 2
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.5, 0, 0, 0, 1, 0, 0, 0, 0.5, 0, 0, 0 )
shape = SubResource( 1 )

[node name="InteractionArea" type="Area" parent="."]
editor/display_folded = true
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="InteractionArea"]
shape = SubResource( 2 )

[node name="SmallInteractionArea" type="Area" parent="."]
editor/display_folded = true
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="SmallInteractionArea"]
shape = SubResource( 3 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.135961, 0 )
material_override = SubResource( 6 )
pixel_size = 0.08
shaded = true
alpha_cut = 2
texture = ExtResource( 4 )
vframes = 8
hframes = 8
script = ExtResource( 5 )

[node name="CameraY" type="Spatial" parent="."]
transform = Transform( 0.998628, 0, 0.0523359, 0, 1, 0, -0.0523359, 0, 0.998628, 0, 0, 0 )
script = ExtResource( 6 )

[node name="CameraX" type="Spatial" parent="CameraY"]
transform = Transform( 1, 0, 0, 0, 0.866026, 0.5, 0, -0.5, 0.866026, 0, 0, 0 )

[node name="Camera" type="Camera" parent="CameraY/CameraX"]
transform = Transform( 0.999998, 0, 0, 0, 0.999999, 0, 0, 0, 0.999997, 0, 0, 14 )
current = true
fov = 65.0
size = 20.0
near = 0.1
far = 200.0

[node name="CloseCamera" type="Camera" parent="CameraY/CameraX"]
transform = Transform( 1, 0, 0, 0, 1, -8.34465e-007, 0, -2.98023e-008, 1, 0, 0, 10 )
fov = 65.0
size = 20.0
near = 0.1

[node name="MidCamera" type="Camera" parent="CameraY/CameraX"]
transform = Transform( 0.999998, 0, 0, 0, 0.999999, 0, 0, 0, 0.999997, 0, 0, 15 )
fov = 65.0
size = 20.0
near = 0.1

[node name="ToyboxCamera" type="Camera" parent="CameraY"]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 15, 15 )
fov = 65.0
size = 20.0
near = 0.1

[node name="Sounds" type="Node" parent="."]
editor/display_folded = true

[node name="JumpSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 7 )
volume_db = -25.0

[node name="JumpOverallsSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 8 )
volume_db = -30.0

[node name="LandSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 9 )
volume_db = -30.0

[node name="BumpSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 10 )
volume_db = -30.0

[node name="FallSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 11 )
volume_db = -25.0

[node name="WormSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 12 )
volume_db = -30.0

[node name="WormClimbSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 13 )
volume_db = -30.0

[node name="HurtSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 14 )
volume_db = -20.0

[node name="SkateSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 15 )
volume_db = -20.0

[node name="Items" type="Spatial" parent="."]

[node name="BugNet" parent="Items" instance=ExtResource( 16 )]
visible = false

[node name="Sword" parent="Items" instance=ExtResource( 17 )]

[node name="PauseMenu" parent="." instance=ExtResource( 18 )]
editor/display_folded = true

[node name="MenuBox" parent="PauseMenu" index="0"]
visible = false
margin_right = 613.0
margin_bottom = 616.0

[node name="TitleBar" parent="PauseMenu/MenuBox" index="0"]
margin_right = 596.0

[node name="TextureButton" parent="PauseMenu/MenuBox/TitleBar" index="0"]
margin_left = 549.266
margin_top = 6.32082
margin_right = 589.266
margin_bottom = 47.3208

[node name="CameraFlash" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3 )
visible = false
material_override = SubResource( 7 )
mesh = SubResource( 8 )
material/0 = null
script = ExtResource( 20 )

[node name="GlitchFilter" type="CanvasLayer" parent="."]
editor/display_folded = true
layer = 64

[node name="TextureRect" type="TextureRect" parent="GlitchFilter"]
visible = false
material = SubResource( 10 )
margin_right = 567.0
margin_bottom = 554.0
texture = ExtResource( 21 )
expand = true

[editable path="PauseMenu"]
